feat: ajout de la configuration Docker et des fichiers nécessaires pour le backend et le probot

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,8 @@ backend/.env
 # Node
 probot-app/node_modules/
 probot-app/package-lock.json
-probot-app/.env
-# Environment files
-# probot-app/.env
+
+.env
 
 # OS/files
 .DS_Store
