fix: mise à jour de la valeur de LLM_PROVIDER dans le fichier render.yml

--- a/render.yml
+++ b/render.yml
@@ -8,7 +8,7 @@ services:
     plan: free
     envVars:
       - key: LLM_PROVIDER
-        value: gemini
+        value: perplexity
       - key: GEMINI_API_KEY
         sync: false
       - key: PERPLEXITY_API_KEY
