--- a/render.yaml
+++ b/render.yaml
@@ -25,8 +25,8 @@ services:
   - type: web
     name: contextwizard-probot
     runtime: docker
-    dockerContext: .
-    dockerfilePath: ./probot-app/Dockerfile
+    dockerContext: ./probot-app
+    dockerfilePath: Dockerfile
     plan: free
     region: frankfurt
     envVars:
