--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,14 @@
 services:
+  # --- SERVICE BACKEND ---
   - type: web
     name: contextwizard-backend
     runtime: docker
     repo: https://github.com/fikulasyon/contextwizard
     branch: clean-code+deploy
-    rootDir: backend
-    dockerfilePath: ./Dockerfile
-    dockerContext: .
+    # On définit la racine du projet comme contexte de build
+    rootDir: .
+    # Chemin relatif depuis la racine
+    dockerfilePath: backend/Dockerfile
     plan: free
     region: frankfurt
     envVars:
@@ -19,14 +21,16 @@ services:
       - key: PORT
         value: 8000
 
+  # --- SERVICE PROBOT ---
   - type: web
     name: contextwizard-probot
     runtime: docker
     repo: https://github.com/fikulasyon/contextwizard
     branch: clean-code+deploy
-    rootDir: probot-app
-    dockerfilePath: ./Dockerfile
-    dockerContext: .
+    # On définit également la racine ici
+    rootDir: .
+    # Chemin relatif depuis la racine
+    dockerfilePath: probot-app/Dockerfile
     plan: free
     region: frankfurt
     envVars:
