--- a/render.yaml
+++ b/render.yaml
@@ -33,4 +33,7 @@ services:
       - key: PRIVATE_KEY
         sync: false
       - key: BACKEND_URL
-        value: http://contextwizard-backend:8000
+        fromService:
+          name: contextwizard-backend
+          type: web
+          property: url
