Modifier l'URL de backend pour utiliser le host au lieu de l'URL dans index.js et mettre à jour la propriété correspondante dans render.yaml.

--- a/render.yaml
+++ b/render.yaml
@@ -36,4 +36,4 @@ services:
         fromService:
           name: contextwizard-backend
           type: web
-          property: url
+          property: host
