--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
-fastapi
-uvicorn[standard]
-pydantic
-google-genai
-python-dotenv
+fastapi>=0.115.0
+pydantic>=2.0.0
+uvicorn>=0.30.0
+python-dotenv>=1.0.0
+google-genai>=0.3.0
+anyio>=4.0.0
