--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,8 @@ backend/pending_comments.db
 # Node
 probot-app/node_modules/
 probot-app/package-lock.json
-probot-app/.env
-# Environment files
-# probot-app/.env
+
+.env
 
 # OS/files
 .DS_Store
